# webdriver_manager

./: Cargo.toml  README.md
src/: browser.rs  downloader.rs  error.rs  lib.rs
src/drivers/: chromedriver.rs  mod.rs
tests/: chromedriver_install.rs
