[package]
name = "webdriver_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
dunce = "1.0.5"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tempfile = "3.20.0"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
walkdir = "2.5.0"
which = "8.0.0"
zip = "4.3.0"
